<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:background="@color/colorPrimaryDark"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <FrameLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="180dp">
        <LinearLayout
                android:layout_gravity="bottom|start"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:textColor="@color/colorBlack"
                    android:id="@+id/buttonStart"
                    android:text="@string/button_title_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginStart="3dp"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="60dp"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textHours"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time"
                    android:textSize="50sp"/>
            <TextView
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginEnd="60dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textMinutes"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time"
                    android:textSize="50sp"/>
            <TextView
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_gravity="bottom|center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textSeconds"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time"
                    android:textSize="90sp"/>
            <TextView
                    android:id="@+id/separator"
                    android:textColor="@color/colorWhite"
                    android:textSize="45sp"
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textMilliseconds"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time"
                    android:textSize="45sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="bottom|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginEnd="3dp"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/milliseconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/buttonReset"
                    android:textColor="@color/colorBlack"
                    android:text="@string/button_title_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>